[package]
name = "euler_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bigdecimal = "0.4.1"
gmp-mpfr-sys = "1.5.3"
memoize = "0.4.0"
modinverse = "0.1.1"
nalgebra = "0.32.3"
num = "0.4.0"
num-bigint = "0.4.3"
num-modular = "0.5.1"
num-traits = "0.2.16"
once_cell = "1.18.0"
primal = "0.3.2"
rand = "0.8.5"
rug = "1.19.2"
